force-app/main/default/objects/Module__c/fields/Module_Score__c.field-meta.xml
<CustomField>
    <fullName>Module_Score__c</fullName>
    <label>Module Score</label>
    <summarizedField>Unit__c.Unit_Score__c</summarizedField>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>