force-app/main/default/objects/Module__c/fields/Module_Time_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Module_Time_Estimated__c</fullName>
    <label>Module Time Estimated</label>
    <summarizedField>Unit__c.Time_Estimated__c</summarizedField>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>