force-app/main/default/objects/Module__c/validationRules/Check_Role_and_Skill_before_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Role_and_Skill_before_Activation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF( Active__c , true, false),ISBLANK( Roles__c ) || ISPICKVAL(  Skill__c , &quot;&quot;))</errorConditionFormula>
    <errorMessage>Can&apos;t activate the module if doesn&apos;t have skills and roles filled.</errorMessage>
</ValidationRule>