force-app/main/default/objects/Module__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unit_Quantity__c</columns>
    <columns>Module_Score__c</columns>
    <columns>Module_Time_Estimated__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>